app/assets/stylesheets/app.buttons.scss
.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open > .btn-default.dropdown-toggle {

	background-color: #f2f2f2;

}

.btn{
	> i{
		&.pull-left,
		&.pull-right{
			line-height: 1.428571429;
		}
	}
}

.btn-warning-full {
	outline: 0;
	text-transform: uppercase;
	//border: 3px solid $yellow;
	//background-color: $yellow;
	&:hover {
		background-color: white;
	}
}

.btn-facebook {
  border: 1px solid #8b9dc3;
  background-color: #3b5998;
  color: white;

  &:hover {
    border: 1px solid #7d8fb4;
    background-color: #394c89;
    color: white;
  }
}

.btn-twitter {
  border: 1px solid #ccd6dd;
  background-color: #55acee;
  color: white;

  &:hover {
    border: 1px solid #bdc7ce;
    background-color: #539fdf;
    color: white;
  }
}


.btn-block {
	padding-left: 12px;
	padding-right: 12px;
}

.btn-group-vertical > .btn:first-child:not(:last-child){
	border-top-right-radius: $border-radius-base;
}

.btn-group-vertical > .btn:last-child:not(:first-child){
	border-bottom-left-radius: $border-radius-base;
}

.btn-inactive{
	-webkit-box-shadow: none !important;
	box-shadow: none !important;
}

.btn-loading:after {
  margin-left: 1em;
  display: inline-block;
  content: "\f110";
  font-family: FontAwesome;
  -webkit-animation:spin 4s linear infinite;
  -moz-animation:spin 4s linear infinite;
  animation:spin 4s linear infinite;
}

@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

